syntax = "proto3";

package api.upload.v1;

import "google/api/annotations.proto";

option go_package = "pet-angel/api/upload/v1;v1";

// 上传服务
// 当前实现：后端中转保存到本地服务器目录，并返回可访问 URL
// 说明：
// - 统一入口 /v1/upload/file，表单字段：file（必填），type（可选：avatar/image/video）
// - 资源会保存到 {local_root}/{type}/{YYYY/MM/DD}/ 文件夹
// - 返回可直接访问的 URL（以 public_prefix 开头，如 /static/...）
service UploadService {
  // 本地表单文件上传（multipart/form-data）
  rpc UploadFile(UploadFileRequest) returns (UploadFileReply) {
    option (google.api.http) = { post: "/v1/upload/file" body: "*" };
  }

  // 以下接口为兼容未来直传方案的占位
  // 获取直传预签名（占位，当前返回未实现）
  rpc GetPresign(GetPresignRequest) returns (GetPresignReply) {
    option (google.api.http) = { get: "/v1/upload/presign" };
  }
  // 上传完成登记（占位，当前回显输入）
  rpc UploadDone(UploadDoneRequest) returns (UploadDoneReply) {
    option (google.api.http) = { post: "/v1/upload/done" body: "*" };
  }
}

// 表单上传请求
message UploadFileRequest {
  // 资源类别（avatar/image/video），也可由表单字段传入（缺省=image）
  string type = 1;
}
// 表单上传响应
message UploadFileReply {
  // 可访问 URL（以 public_prefix 开头，如 /static/...）
  string url = 1;
}

// 预签名请求
message GetPresignRequest {
  // 原始文件名（含扩展名）
  string file_name = 1;
  // MIME 类型（如 image/png）
  string content_type = 2;
}
// 预签名响应
message GetPresignReply {
  // 直传地址（PUT/POST）
  string url = 1;
  // 使用方法：PUT/POST
  string method = 2;
  // 直传需要携带的HTTP头
  map<string,string> headers = 3;
  // 上传完成后的可访问URL
  string final_url = 4;
}

// 上传完成登记请求
message UploadDoneRequest {
  // 已上传对象的访问URL
  string url = 1;
}
// 上传完成登记响应
message UploadDoneReply {
  // 确认后的访问URL（可与入参相同）
  string url = 1;
}