syntax = "proto3";
package kratos.api;

option go_package = "pet-angel/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  Auth auth = 3; // JWT 配置
  Minio minio = 4; // MinIO 对象存储（可选）
  Storage storage = 5; // 本地存储（开发阶段使用）
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
  }
  Database database = 1;
  Redis redis = 2;
}

// 认证配置
message Auth {
  string jwt_secret = 1;                  // HMAC 密钥
  google.protobuf.Duration jwt_ttl = 2;   // token 有效期
}

// MinIO 配置
message Minio {
  string endpoint = 1;   // 例如 47.121.139.174:9000
  string access_key = 2; // 访问密钥
  string secret_key = 3; // 密钥
  bool use_ssl = 4;      // 是否使用https
  string bucket = 5;     // 存储桶
}

// 本地存储配置
message Storage {
  string local_root = 1;   // 本地根目录（相对/绝对均可）
  string public_prefix = 2; // 对外访问前缀，例如 /static/
}
